--- a/01_Climate_tense_analysis.Rmd
+++ b/01_Climate_tense_analysis.Rmd
@@ -136,7 +136,7 @@ legend(x="topright", legend=c("All", "In analysis"), fill=c("white", "grey"))
 
 
 ### 3. Preliminary plots
-```{r, include=F}
+```{r, include=T}
 TenseSum <-
   df %>%
   group_by(tense) %>%
@@ -155,7 +155,7 @@ TenseBasicPlot <- ggplot(TenseSum,aes(x=tense,y=rel.freq)) +
 
 TenseBasicPlot
 ```
-```{r include=F}
+```{r include=T}
 DateRangeSum <-
   df %>%
   group_by(climate_date_range) %>%
@@ -175,16 +175,16 @@ CitationSum
 ```
 
 
-### 5. Crosstabulations that we want to show in a multi-panel figure
-```{r, echo=F}
-#Tables cross-classifying tense and groupings (since plots look fishy...)
+### 4. Crosstabulations for text (shown in figure)
+```{r, include=F}
+#Tables cross-classifying tense and groupings
 ## How to order the columns
-order_cols <- c('past','implicit past', 'present', 'implicit present', 'unclear_inconsistent')
+order_cols <- c('past','implicit past', 'present', 'implicit present', 'ambiguous')
 
 t1 <- CrossTable(df$paper_focus, df$tense_lumpbad)
 res <-apply(t1$prop.row,2,function(x) {round(x*100,1)})
 
-order_rows <- c('climate change effects','weather effects','not temporal')
+order_rows <- c('climate change effects','weather effects','atemporal')
 ResFocus <- res[order_rows,order_cols]
 
 t1 <- CrossTable(df$upd_geographic_extent, df$tense_lumpbad)
@@ -207,25 +207,32 @@ ResCitation <- res[order_rows,order_cols]
 ```
 
 
-```{r, include=F}
+```{r}
+#Results based on geographic extent
 ResExtent
+
+#Results based on focus of paper
 ResFocus
+
+#Results based on whether date range is given
 ResDateRange
+
+#Results based on whether citation is given
 ResCitation
 ```
-Some more cross tabulations
-```{r, include=F}
-t1 <- CrossTable(df$climate_date_range, df$citation)
-res1 <-apply(t1$prop.row,2,function(x) {round(x*100,1)})
+<!-- Some more cross tabulations -->
+<!-- ```{r, include=F} -->
+<!-- t1 <- CrossTable(df$climate_date_range, df$citation) -->
+<!-- res1 <-apply(t1$prop.row,2,function(x) {round(x*100,1)}) -->
 
-t1 <- CrossTable(df$climate_data_source, df$upd_geographic_extent)
-res2 <-apply(t1$prop.row,2,function(x) {round(x*100,1)})
-
-
-```
+<!-- t1 <- CrossTable(df$climate_data_source, df$upd_geographic_extent) -->
+<!-- res2 <-apply(t1$prop.row,2,function(x) {round(x*100,1)}) -->
 
 
-### 6. Final plot
+<!-- ``` -->
+
+
+### 5. Final plot
 Adapted from Matt's code
 ```{r echo=F}
 ### MANUALLY CONSTRUCT LIKERT BAR CHART
@@ -312,10 +319,10 @@ p <- ggplot(f, aes(x=x*100, y=level, width=n*100, height=.9, fill=tns)) +
       scale_x_continuous(breaks=seq(-100, 100, 25), 
                          labels=abs(seq(-100, 100, 25)), 
                          limits=c(-100,100)) +
-      labs(fill="CLIMATE TENSE", x="percentage of papers")
+      labs(fill="Climate tense", x="percentage of papers")
 
 p
-#ggsave("likert_bars.png", width=7, height=5, units="in")
+#ggsave("likert_bars_v2.png", width=7, height=5, units="in")
 
 
 ```
