--- a/01_Climate_tense_analysis.Rmd
+++ b/01_Climate_tense_analysis.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(comment = "#>")
 require(likert)
 require(ggplot2)
 require(dplyr)
+require(tidyr)
 require(gmodels)
 ```
 
@@ -46,8 +47,8 @@ df$tense_lump3 <- df$tense_lumpbad
 df$tense_lump3[which(df$tense=='past' | df$tense=='implicit past')] = 'any_past'
 df$tense_lump3[which(df$tense=='present' | df$tense=='implicit present')] = 'any_present'
 
-#Rename tense 'not temporal' to 'atemporal'
-df$paper_focus[which(df$paper_focus=='not temporal')] = 'atemporal'
+#Rename tense 'not temporal' to 'general ecology'
+df$paper_focus[which(df$paper_focus=='not temporal')] = 'general ecology'
 
 ```
 
@@ -184,7 +185,7 @@ order_cols <- c('past','implicit past', 'present', 'implicit present', 'ambiguou
 t1 <- CrossTable(df$paper_focus, df$tense_lumpbad)
 res <-apply(t1$prop.row,2,function(x) {round(x*100,1)})
 
-order_rows <- c('climate change effects','weather effects','atemporal')
+order_rows <- c('climate change effects','weather effects','general ecology')
 ResFocus <- res[order_rows,order_cols]
 
 t1 <- CrossTable(df$upd_geographic_extent, df$tense_lumpbad)
@@ -259,16 +260,6 @@ d <- gather(d, factor, level, paper_focus, upd_geographic_extent, citation, clim
                            levels=c("paper_focus", "upd_geographic_extent", "climate_date_range", "citation"),
                            labels=c("Study\nfocus", "Study\nextent", "Time\nperiod?", "Citation?")))
 
-# p <- ggplot(d, aes(level, fill=tns)) + 
-#       geom_bar(position="fill") +
-#       scale_fill_manual(values=rev(c("darkred", "red", "gray80", "dodgerblue", "darkblue"))) +
-#       coord_flip() +
-#       facet_grid(factor~., scales="free", space="free") +
-#       theme(panel.background=element_blank()) +
-#       theme(axis.ticks.y=element_blank()) +
-#       labs(fill="tense", y="proportion of papers", x=NULL)
-# #ggsave("stacked_bar.png", width=7, height=5, units="in")
-
 
 prop2likert <- function(x){
       y <- x
@@ -305,14 +296,14 @@ f <- d %>%
       # put levels in a sensical order
       ungroup() %>%
       mutate(level=factor(level, 
-                          levels=c("atemporal", "weather effects", "climate change effects", 
+                          levels=c("general ecology", "weather effects", "climate change effects", 
                                    "site", "regional", "continental/global",
                                    "FALSE", "TRUE")))
 
 p <- ggplot(f, aes(x=x*100, y=level, width=n*100, height=.9, fill=tns)) + 
       geom_tile() +
       facet_grid(factor~., scales="free", space="free") +
-      scale_fill_manual(values=c("darkred", "red", "gray80", "dodgerblue", "darkblue")) +
+      scale_fill_manual(values=rev(c("darkred", "red", "gray80", "dodgerblue", "darkblue"))) +
       theme(panel.background=element_rect(fill="gray95"), panel.grid=element_blank(),
             axis.title.y=element_blank(), axis.ticks.y=element_blank(),
             legend.position="top") +
